--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -114,7 +114,7 @@
                     <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
             
                     <label for="senha">Senha</label>
-                    <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required>
+                    <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
             
                     <p>Esqueceu a senha?<a href="#" id="esqueceu-senha">Clique aqui!</a></p>
 
@@ -142,10 +142,10 @@
                 <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
         
                 <label for="senha">Senha</label>
-                <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required>
+                <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
 
                 <label for="senha">Confirmar senha</label>
-                <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required>
+                <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
         
                 <button type="submit" id="cadastrar-form-button">CADASTRAR</button>
             </form>
