--- a/src/views/index2.ejs
+++ b/src/views/index2.ejs
@@ -1,41 +1,376 @@
 <%- include('includes/head'); %>
-<%- include('includes/nav'); %>
+  <div id="cabecalho">
+    <p>Produtos Sustentáveis
+      <img src="/assets/icone-nexus.png" alt="icone-nexus">
+    </p>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-2"></div>
+  </div>
 
-        <div class="col-lg-8 my-3">
-          <h1 class="text-center">Agenda</h1>
-          <p class="text-center lead">Seus contatos estão abaixo</p>
+  <header>
+    <a href="index.html">
+      <div id="logo">
+        <img src="/assets/icone-nexus.png" alt="" id="icone-nx">
+        <img src="/assets/nexus.png" alt="" id="nome-nx">
+      </div>
+    </a>
 
-          <%- include('includes/messages'); %>
+    <div id="divBusca">
+      <input type="text" id="txtBusca" placeholder="Procurar por produtos" />
+      <button id="btnBusca"><img src="/assets/icone-buscar.png" alt="Buscar..." /></button>
+    </div>
 
-          <div class="responsive-table">
-            <% if(contatos.length !== 0) { %>
-              <table class="table my-3">
-                <% contatos.forEach(contato => { %>
-                  <tr>
-                    <td><%= contato.nome %></td>
-                    <td><%= contato.sobrenome %></td>
-                    <td><%= contato.telefone %></td>
-                    <td><%= contato.email %></td>
-                    <td><a href="/contato/index/<%= contato._id %>">Editar</a></td>
-                    <td><a class="text-danger" href="/contato/delete/<%= contato._id %>">Excluir</a></td>
-                  </tr>
-                <% }); %>
-                
-              </table>
-            <% }else { %>
-              <h1 class="text-center">Você não possui nenhum contato.</h1>
-            <% } %>
-            
-          </div>
+    <div class="opcoes-usuario" id="opcoes-usuario-atendimento">
+      <a href="#">
+        <img src="/assets/icone-atendimento.png" alt="icone-atendimento">
+        <p>Central de <br> <b>Atendimento</b></p>
+      </a>
+    </div>
 
+    <div class="opcoes-usuario">
+      <a href="#">
+        <img src="/assets/icone-user.png" alt="icone-atendimento">
+        <p>Entrar ou<br> <b>Cadastrar</b></p>
+      </a>
+    </div>
+
+    <div class="opcoes-usuario">
+      <a href="#">
+        <img src="/assets/icone-carrinho.png" alt="">
+      </a>
+    </div>
+  </header>
+  <nav>
+    <ul class="menu">
+      <li><a href="#">Alimentos e Bebidas <img src="/assets/seta-baixo.png"></a>
+        <ul>
+          <li><a href="#">Categoria 1</a></li>
+          <li><a href="#">Categoria 2</a></li>
+          <li><a href="#">Categoria 3</a></li>
+        </ul>
+      </li>
+
+      <li><a href="#">Beleza e Higiene <img src="/assets/seta-baixo.png"></a>
+        <ul>
+          <li><a href="#">Categoria 1</a></li>
+          <li><a href="#">Categoria 2</a></li>
+          <li><a href="#">Categoria 3</a></li>
+        </ul>
+      </li>
+
+      <li><a href="#">Casa e Jardim <img src="/assets/seta-baixo.png"></a>
+        <ul>
+          <li><a href="#">Categoria 1</a></li>
+          <li><a href="#">Categoria 2</a></li>
+          <li><a href="#">Categoria 3</a></li>
+        </ul>
+      </li>
+
+      <li><a href="#">Saúde <img src="/assets/seta-baixo.png"></a>
+        <ul>
+          <li><a href="#">Categoria 1</a></li>
+          <li><a href="#">Categoria 2</a></li>
+          <li><a href="#">Categoria 3</a></li>
+        </ul>
+      </li>
+
+      <li><a href="#">Moda <img src="/assets/seta-baixo.png"></a>
+        <ul>
+          <li><a href="#">Categoria 1</a></li>
+          <li><a href="#">Categoria 2</a></li>
+          <li><a href="#">Categoria 3</a></li>
+        </ul>
+      </li>
+
+      <li><a href="#">Outros <img src="/assets/seta-baixo.png"></a>
+        <ul>
+          <li><a href="#">Categoria 1</a></li>
+          <li><a href="#">Categoria 2</a></li>
+          <li><a href="#">Categoria 3</a></li>
+        </ul>
+      </li>
+
+      <li><a href="#" id="marca">Marcas <img src="/assets/seta-baixo.png"> </a>
+        <ul>
+          <li><a href="#">Nome da marca 1</a></li>
+          <li><a href="#">Nome da marca 2</a></li>
+          <li><a href="#">Nome da marca 3</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+
+  <section id="banner-principal">
+
+  </section>
+
+  <section class="produtos">
+    <div class="titulo-produtos">
+      <img src="/assets/icone-nexus.png" alt="">
+      <h2>Ofertas</h2>
+    </div>
+
+    <div class="container-cards">
+      <div class="card">
+        <img src="/assets/produto1.png" alt="">
+        <h3>Nome do Produto</h3>
+        <p>R$ 300,00</p>
+        <div class="informacoes-marca">
+          <div class="circulo"></div>
+          <h5>Nome da marca</h5>
         </div>
+        <button><img src="/assets/icone-carrinho2.png">COMPRAR</button>
+      </div>
 
-        <div class="col-lg-2"></div>
+      <div class="card">
+        <img src="/assets/produto2.png" alt="">
+        <h3>Nome do Produto</h3>
+        <p>R$ 300,00</p>
+        <div class="informacoes-marca">
+          <div class="circulo"></div>
+          <h5>Nome da marca</h5>
+        </div>
+        <button><img src="/assets/icone-carrinho2.png">COMPRAR</button>
+      </div>
+
+      <div class="card">
+        <img src="/assets/produto1.png" alt="">
+        <h3>Nome do Produto</h3>
+        <p>R$ 300,00</p>
+        <div class="informacoes-marca">
+          <div class="circulo"></div>
+          <h5>Nome da marca</h5>
+        </div>
+        <button><img src="/assets/icone-carrinho2.png">COMPRAR</button>
+      </div>
+
+      <div class="card">
+        <img src="/assets/produto3.png" alt="">
+        <h3>Nome do Produto</h3>
+        <p>R$ 300,00</p>
+        <div class="informacoes-marca">
+          <div class="circulo"></div>
+          <h5>Nome da marca</h5>
+        </div>
+        <button><img src="/assets/icone-carrinho2.png">COMPRAR</button>
+      </div>
+    </div>
+  </section>
+
+  <section class="categorias">
+    <div class="titulo-produtos">
+      <img src="/assets/icone-nexus.png" alt="">
+      <h2>Categorias em Alta</h2>
+    </div>
+
+    <div class="container-cards">
+      <div class="cards2">
+        <img src="#" alt="">
+      </div>
+
+      <div class="cards2">
+        <img src="#" alt="">
+      </div>
+
+      <div class="cards2">
+        <img src="#" alt="">
+      </div>
+
+      <div class="cards2">
+        <img src="#" alt="">
+      </div>
+
+      <div class="cards2">
+        <img src="#" alt="">
+      </div>
+
+      <div class="cards2">
+        <img src="#" alt="">
+      </div>
+    </div>
+  </section>
+
+  <section id="escolher-parceiros">
+    <div id="titulo-parceiros">
+      <img src="/assets/icone-nexus.png" alt="">
+      <h2>Como escolhemos nossos parceiros?</h2>
+    </div>
+
+
+  </section>
+
+  <section class="produtos">
+    <div class="titulo-produtos">
+      <img src="/assets/icone-nexus.png" alt="">
+      <h2>Lançamentos</h2>
+    </div>
+
+    <div class="container-cards">
+      <div class="card">
+        <img src="/assets/produto1.png" alt="">
+        <h3>Nome do Produto</h3>
+        <p>R$ 300,00</p>
+        <div class="informacoes-marca">
+          <div class="circulo"></div>
+          <h5>Nome da marca</h5>
+        </div>
+        <button><img src="/assets/icone-carrinho2.png">COMPRAR</button>
+      </div>
+
+      <div class="card">
+        <img src="/assets/produto2.png" alt="">
+        <h3>Nome do Produto</h3>
+        <p>R$ 300,00</p>
+        <div class="informacoes-marca">
+          <div class="circulo"></div>
+          <h5>Nome da marca</h5>
+        </div>
+        <button><img src="/assets/icone-carrinho2.png">COMPRAR</button>
+      </div>
+
+      <div class="card">
+        <img src="/assets/produto1.png" alt="">
+        <h3>Nome do Produto</h3>
+        <p>R$ 300,00</p>
+        <div class="informacoes-marca">
+          <div class="circulo"></div>
+          <h5>Nome da marca</h5>
+        </div>
+        <button><img src="/assets/icone-carrinho2.png">COMPRAR</button>
+      </div>
+
+      <div class="card">
+        <img src="/assets/produto3.png" alt="">
+        <h3>Nome do Produto</h3>
+        <p>R$ 300,00</p>
+        <div class="informacoes-marca">
+          <div class="circulo"></div>
+          <h5>Nome da marca</h5>
+        </div>
+        <button><img src="/assets/icone-carrinho2.png">COMPRAR</button>
+      </div>
+    </div>
+  </section>
+
+  <section class="depoimentos">
+    <div class="titulo-produtos">
+      <img src="/assets/icone-nexus.png" alt="">
+      <h2>Depoimentos</h2>
+    </div>
+
+    <div class="container-cards">
+      <div class="card3">
+        <h2>Nome Sobrenome</h2>
+        <h3>Cidade/ Estado</h3>
+        <p>Toda nova marca passa por uma curadoria especializada para garantirmos sempre produtos veganos e
+          sustentáveis!</p>
+        <div class="nota">
+          <img src="/assets/star 1.png" alt="">
+          <img src="/assets/star 1.png" alt="">
+          <img src="/assets/star 1.png" alt="">
+          <img src="/assets/star 1.png" alt="">
+          <img src="/assets/star 1.png" alt="">
+        </div>
+      </div>
+
+      <div class="card3">
+        <h2>Nome Sobrenome</h2>
+        <h3>Cidade/ Estado</h3>
+        <p>Toda nova marca passa por uma curadoria especializada para garantirmos sempre produtos veganos e
+          sustentáveis!</p>
+        <div class="nota">
+          <img src="/assets/star 1.png" alt="">
+          <img src="/assets/star 1.png" alt="">
+          <img src="/assets/star 1.png" alt="">
+          <img src="/assets/star 1.png" alt="">
+        </div>
+      </div>
+
+      <div class="card3">
+        <h2>Nome Sobrenome</h2>
+        <h3>Cidade/ Estado</h3>
+        <p>Toda nova marca passa por uma curadoria especializada para garantirmos sempre produtos veganos e
+          sustentáveis!</p>
+        <div class="nota">
+          <img src="/assets/star 1.png" alt="">
+          <img src="/assets/star 1.png" alt="">
+          <img src="/assets/star 1.png" alt="">
+          <img src="/assets/star 1.png" alt="">
+          <img src="/assets/star 1.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="motivacao">
+    <div class="card4">
+      <div class="circulo2"><img src="/assets/lupa.png" alt=""></div>
+      <h2>Curadoria própria especializada</h2>
+      <p>Toda nova marca passa por uma curadoria especializada para garantirmos sempre produtos veganos e sustentáveis!
+      </p>
+    </div>
+
+    <div class="card4">
+      <div class="circulo2"><img src="/assets/sacola.png" alt=""></div>
+      <h2>Milhares de produtos, um só lugar</h2>
+      <p>Na Nexus você encontra milhares de produtos e todos os dias tem novidades na plataforma!</p>
+    </div>
+
+    <div class="card4">
+      <div class="circulo2"><img src="/assets/tag-sacola.png" alt=""></div>
+      <h2>Ótimos preços, sempre!</h2>
+      <p>Analisamos os preços de todos os produtos cadastrados para garantir ótimas condições de compra!</p>
+    </div>
+  </section>
+
+  <footer>
+    <div id="redes-sociais">
+      <img src="/assets/icon-instagram.png" alt="">
+      <img src="/assets/icon-facebook.png" alt="">
+      <img src="/assets/icon-twitter.png" alt="">
+    </div>
+
+    <div id="primeira-parte">
+      <img src="/assets/nexus-ofc.png" alt="">
+
+      <div class="footer-colunas">
+        <h3>Institucional</h3>
+        <a>Sobre nós</a>
+        <a>Contato</a>
+        <a>Trabalhe Conosco</a>
+        <a>Nosso Blog</a>
+      </div>
+
+      <div class="footer-colunas">
+        <h3>Atendimento</h3>
+        <p><img src="/assets/whatsapp 1.png" alt="">+55 89 9 9449-0526</p>
+        <p id="observacao">Atendimentos via whatsapp de segunda a sexta das 10h às 17h.</p>
+      </div>
+
+      <div class="footer-colunas" id="informacoes">
+        <h3>Informações</h3>
+        <a>Termos e Condições do Comprador</a>
+        <a>Política de Privacidade e Segurança</a>
+        <a>Política de Trocas e Devoluções</a>
+        <a>Termos e condições gerais de Marketplace</a>
       </div>
     </div>
 
-<%- include('includes/footer'); %>
+    <div id="segunda-parte">
+      <div>
+        <h3>Pagamentos</h3>
+        <img src="/assets/pagamentos.png" alt="">
+      </div>
+      <div id="NEWSLETTER">
+        <h3 id="titulo-news">Receba a nossa
+          <br> NEWSLETTER
+        </h3>
+        <div id="divBusca">
+          <input type="text" id="txtBusca" placeholder="Digite seu email" />
+          <button id="btnBusca"><img src="/assets/mail 1.png" /></button>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="/assets/js/bundle.js"></script>
+</body>
+</html>
