--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -374,7 +374,7 @@
         <div id="divBusca">
           <input type="text" id="txtBusca" placeholder="Digite seu email" />
           <button id="btnBusca"><img src="/assets/img/mail 1.png" /></button>
-        </div>img/
+        </div>
       </div>
     </div>
   </footer>
