--- a/src/views/cadastro-loja-inicial.ejs
+++ b/src/views/cadastro-loja-inicial.ejs
@@ -30,7 +30,7 @@
             <img src="/assets/img/10613770.jpg" alt="">
             <h1>Bem-vindo ao Nexus!</h1>
             <p>Para começar, faça o cadastro da sua loja no Nexus e preencha algumas informações necessárias</p>
-            <a href="/pages/cadastrar-loja.html"><button>Começar Cadastro</button></a>
+            <a href="/loja/cadastrar"><button>Começar Cadastro</button></a>
         </section>
     </main>
 </body>
