--- a/src/views/cadastrar-loja.ejs
+++ b/src/views/cadastrar-loja.ejs
@@ -6,7 +6,7 @@
     <title>Cadastro de Loja</title>
 
     <link rel="stylesheet" href="/assets/css/style_cadastro_produtor.css">
-    <link rel="stylesheet" href="assets/css/style_login.css">
+    <link rel="stylesheet" href="/assets/css/style_login.css">
 </head>
 <body>
     <div id="cabecalho">
@@ -28,8 +28,10 @@
     <main>
         <section>
            <div id="form-produtor">
+                <%- include('includes/messages'); %>
                 <h2>Informações para identificação fiscal</h2>
-                <form class="login-form">
+                <form action="/loja/enviarCadastro" method="post" class="login-form">
+                    <input type="hidden" name="_csrf" value=<%=csrfToken %>>
                     <div class="forms-clas">
                         <div class="forms-clas2">
                             <label for="nome">Nome</label>
@@ -45,7 +47,7 @@
                     <div class="forms-clas">
                         <div class="forms-clas2">
                             <label for="cpf">CPF</label>
-                            <input type="number" id="cpf" name="cpf" placeholder="Digite seu cpf" required>
+                            <input type="text" id="cpf" name="cpf" placeholder="Digite seu cpf" required>
                         </div>
 
                         <div class="forms-clas2" id="segundo">
@@ -70,7 +72,7 @@
 
                         <div class="forms-clas2" id="segundo">
                             <label for="telefone">Telefone</label>
-                            <input type="number" id="telefone" name="telefone" placeholder="Digite seu telefone" required>
+                            <input type="text" id="telefone" name="telefone" placeholder="Digite seu telefone" required>
                         </div>
                     </div>
 
@@ -105,12 +107,12 @@
                             </div>
                         </div>
 
-                    <label for="Complemento">Complemento</label>
-                    <input type="text" id="Complemento" name="Complemento">
+                    <label for="complemento">Complemento</label>
+                    <input type="text" id="complemento" name="complemento">
 
                     <div class="botoes">
-                        <a href="index.html"><button id="botao2">CANCELAR</button></a>
-                        <a href="cadastro-loja-final.html"><button type="submit" id="botao">ENVIAR</button></a>
+                        <a href="/"><button id="botao2">CANCELAR</button></a>
+                        <button type="submit" id="botao">ENVIAR</button>
                     </div>
                 </form>
         
