--- a/src/views/login-cliente.ejs
+++ b/src/views/login-cliente.ejs
@@ -110,8 +110,9 @@
                 <h2>Login</h2>
                 <form class="login-form" action="/cliente/login" method="post">
                     <input type="hidden" name="_csrf" value=<%=csrfToken %>>
-                    <label for="email">E-mail</label>
-                    <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
+                    
+                    <label for="email">Usuario</label>
+                    <input type="text" id="usuario" name="usuario" placeholder="Digite seu usuario" required>
             
                     <label for="senha">Senha</label>
                     <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
@@ -138,6 +139,10 @@
             <h2 id="cadastrar-form-titulo">Cadastre-se</h2>
             <form class="register-form" action="/cliente/register" method="post">
                 <input type="hidden" name="_csrf" value=<%=csrfToken %>>
+
+                <label for="email">Usuario</label>
+                <input type="text" id="usuario" name="usuario" placeholder="Digite seu usuario" required>
+
                 <label for="email">E-mail</label>
                 <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
         
