--- a/frontend/assets/css/style_dashboard_produtor.css
+++ b/frontend/assets/css/style_dashboard_produtor.css
@@ -12,7 +12,7 @@
     color: #35384B;
 }
 
-.container-main > .circulo{
+.container-main > a > .circulo{
     width: 50px;
     height: 50px;
     padding: 10px;
