--- a/src/views/dashboard-produtor.html
+++ b/src/views/dashboard-produtor.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Loja</title>
 
-    <link rel="stylesheet" href="/styles/style_cadastro_loja.css">
-    <link rel="stylesheet" href="/styles/style_login.css">
-    <link rel="stylesheet" href="/styles/style_dashboard_produtor.css">
+    <link rel="stylesheet" href="/frontend/assets/css/style_cadastro_loja.css">
+    <link rel="stylesheet" href="/frontend/assets/css/style_login.css">
+    <link rel="stylesheet" href="/frontend/assets/css/style_dashboard_produtor.css">
 </head>
 <body>
     <div id="cabecalho">
@@ -29,38 +29,38 @@
     <main>
         <div class="container">
             <section class="container-main">
-                <img src="/frontend/assets/img/icone-loja.png" alt="" class="circulo">
+                <a href="#"><img src="/frontend/assets/img/icone-loja.png" alt="" class="circulo"></a>
                 <h2>Perfil Loja</h2>
             </section>
             <section class="container-main">
-                <img src="/frontend/assets/img/icone-pedidos.png" alt="" class="circulo">
+                <a href="/src/views/estoque-produtos.html"><img src="/frontend/assets/img/icone-pedidos.png" alt="" class="circulo"></a>
                 <h2>Estoque Produtos</h2>
             </section>
             <section class="container-main">
-                <img src="/frontend/assets/img/icone-categorias.png" alt="" class="circulo">
+                <a href="#"><img src="/frontend/assets/img/icone-categorias.png" alt="" class="circulo"></a>
                 <h2>Categorias</h2>
             </section>
             <section class="container-main">
-                <img src="/frontend/assets/img/icone-historico.png" alt="" class="circulo">
+                <a href="#"><img src="/frontend/assets/img/icone-historico.png" alt="" class="circulo"></a>
                 <h2>Pedidos</h2>
             </section>
         </div>
 
         <div class="container">
             <section class="container-main">
-                <img src="/frontend/assets/img/icone-configuracao.png" alt="" class="circulo">
+                <a href="#"><img src="/frontend/assets/img/icone-configuracao.png" alt="" class="circulo"></a>
                 <h2>Configurações</h2>
             </section>
             <section class="container-main">
-                <img src="/frontend/assets/img/icone-mensagem.png" alt="" class="circulo">
+                <a href="#"><img src="/frontend/assets/img/icone-mensagem.png" alt="" class="circulo"></a>
                 <h2>Mensagens</h2>
             </section>
             <section class="container-main">
-                <img src="/frontend/assets/img/icone-avaliação.png" alt="" class="circulo">
+                <a href="#"><img src="/frontend/assets/img/icone-avaliação.png" alt="" class="circulo"></a>
                 <h2>Avaliações</h2>
             </section>
             <section class="container-main">
-                <img src="/frontend/assets/img/icone-ajuda.png" alt="" class="circulo">
+                <a href="#"><img src="/frontend/assets/img/icone-ajuda.png" alt="" class="circulo"></a>
                 <h2>Ajuda</h2>
             </section>
         </div>
