backend: cadastro de produtos

--- a/src/views/cadastrar-produto.ejs
+++ b/src/views/cadastrar-produto.ejs
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Produto</title>
 
-    <link rel="stylesheet" href="/frontend/assets/css/style_cadastro_produtor.css">
-    <link rel="stylesheet" href="/frontend/assets/css/style_login.css">
+    <link rel="stylesheet" href="/assets/css/style_cadastro_produtor.css">
+    <link rel="stylesheet" href="/assets/css/style_login.css">
 </head>
 <body>
     <div id="cabecalho">
         <p>Produtos Sustentáveis
-            <img src="/frontend//assets/img/icone-nexus.png" alt="icone-nexus">
+            <img src="/assets/img/icone-nexus.png" alt="icone-nexus">
         </p>
         
     </div>
@@ -19,8 +19,8 @@
     <header class="logo-login">
         <a href="index.html">
             <div id="logo2">
-                <img src="/frontend//assets/img/icone-nexus.png" alt="" id="icone-nx">
-                <img src="/frontend//assets/img/nexus.png" alt="" id="nome-nx">
+                <img src="/assets/img/icone-nexus.png" alt="" id="icone-nx">
+                <img src="/assets/img/nexus.png" alt="" id="nome-nx">
             </div>
         </a>
     </header>
@@ -29,7 +29,8 @@
         <section>
            <div id="form-produtor">
                 <h2>Cadastrar Produto</h2>
-                <form class="login-form">
+                <form class="login-form" action="/loja/cadastrar/produto/cadastro" method="post">
+                    <input type="hidden" name="_csrf" value=<%=csrfToken %>>
                     <div class="forms-clas">
                         <div class="forms-clas2">
                             <label for="nome">Nome</label>
@@ -47,27 +48,25 @@
 
                     <div class="forms-clas">
                         <div class="forms-clas2">
-                            <label for='selecao-arquivo' class="selecao-arquivo"><img src="/frontend/assets/img/image-solid 1.png" alt="">Selecione uma imagem</label>
+                            <label for='selecao-arquivo' class="selecao-arquivo"><img src="/assets/img/image-solid 1.png" alt="">Selecione uma imagem</label>
                             <input type="file" id="imagem1" class="imagem-input">
                         </div>
 
                         <div class="forms-clas2" id="segundo">
-                            <label for='selecao-arquivo' class="selecao-arquivo"><img src="/frontend/assets/img/image-solid 1.png" alt="">Selecione uma imagem</label>
+                            <label for='selecao-arquivo' class="selecao-arquivo"><img src="/assets/img/image-solid 1.png" alt="">Selecione uma imagem</label>
                             <input type="file"id="imagem2" class="imagem-input">
                         </div>
 
                         <div class="forms-clas2" id="segundo">
-                            <label for='selecao-arquivo' class="selecao-arquivo"><img src="/frontend/assets/img/image-solid 1.png" alt="">Selecione uma imagem</label>
+                            <label for='selecao-arquivo' class="selecao-arquivo"><img src="/assets/img/image-solid 1.png" alt="">Selecione uma imagem</label>
                             <input type="file" id="imagem3" class="imagem-input">
                         </div>
                     </div>
-
-                    <div class="botoes">
-                        <a href="index.html"><button id="botao2">CANCELAR</button></a>
-                        <a href="cadastro-loja-final.html"><button type="submit" id="botao">ENVIAR</button></a>
-                    </div>
+                    <button type="submit" id="botao">ENVIAR</button>
                 </form>
-        
+                <div class="botoes">
+                    <a href="/loja/estoque"><button id="botao2">CANCELAR</button></a>
+                </div>
            </div>
         </section>
     </main>
