--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -33,6 +33,11 @@
         </a>
       </div>
       <div class="logout">
+        <a href="/">
+          <%= user.usuario %>
+        </a>
+      </div>
+      <div class="logout">
         <a href="/logout">
           Sair
         </a>
