fix: correções de bugs no home

--- a/src/views/dashboard-produtor.ejs
+++ b/src/views/dashboard-produtor.ejs
@@ -24,14 +24,14 @@
                 <img src="/assets/img/nexus.png" alt="" id="nome-nx">
             </div>
         </a>
-        <% if(loja) { %>
-            <h1>Olá <%= loja.nomeLoja %></h1>
+            <div class="logout">
+                <a>Olá <%= loja.nomeLoja %></a>
+            </div>
             <div class="logout">
                 <a href="/logout">
                   Sair
                 </a>
-              </div>
-        <% } %>
+            </div>
     </header>
 
     <main>
