--- a/src/views/estoque-produtos.ejs
+++ b/src/views/estoque-produtos.ejs
@@ -17,7 +17,7 @@
     </div>
 
     <header>
-        <a href="index.html">
+        <a href="/loja/dashboard">
             <div id="logo">
                 <img src="/assets/img/icone-nexus.png" alt="" id="icone-nx">
                 <img src="/assets/img/nexus.png" alt="" id="nome-nx">
